# role-forge

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Justfile  README.md  prek.toml  pyproject.toml  vercel.json  zensical.toml
.github/: codecov.yml
.github/workflows/: ci-docs.yml  ci-pr-title.yml  ci-static-checks.yml  ci-tests.yml  publish.yml
docs/: conventions.md  index.md
docs/architecture/: index.md  project-structure.md  render-pipeline.md  system-overview.md
docs/development/: contributing.md  deployment.md  index.md  toolchain.md
docs/plans/: 2026-02-27-agent-refit-design.md  2026-03-02-cli-redesign-design.md  2026-03-02-cli-redesign-plan.md  2026-03-02-toolchain-upgrade-design.md  capability-system-redesign.md
docs/reference/: adapters.md  canonical-role-definition.md  cli.md  configuration.md  index.md
src/agent_caster/: __init__.py  cli.py  config.py  loader.py  models.py  platform.py  registry.py  topology.py
src/agent_caster/adapters/: __init__.py  claude.py  cursor.py  opencode.py  windsurf.py
src/role_forge/: __init__.py  _version.py  capabilities.py  cli.py  config.py  groups.py  loader.py  log.py  models.py  platform.py  registry.py  topology.py
src/role_forge/adapters/: __init__.py  base.py  claude.py  cursor.py  opencode.py  windsurf.py
tests/: conftest.py  test_capabilities.py  test_claude.py  test_cli.py  test_config.py  test_cursor.py  test_loader.py  test_opencode.py  test_platform.py  test_registry.py  test_topology.py  test_windsurf.py
tests/__snapshots__/: test_claude.ambr  test_cursor.ambr  test_opencode.ambr  test_windsurf.ambr
tests/fixtures/: roles.toml
tests/fixtures/.agents/roles/: aligner.md  explorer.md  orchestrator.md
tests/fixtures/.agents/roles/nested/: feature-lead.md  nested-coordinator.md
tests/fixtures/.agents/roles/nested/support/: research-helper.md
tests/fixtures/.agents/roles/nested/workers/: impl-worker.md  qa-worker.md
